getting pages working

--- a/notebooks/mimic_cc.Rmd
+++ b/notebooks/mimic_cc.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 knit: (function(inputFile, encoding) { 
       rmarkdown::render(inputFile,
                         encoding=encoding, 
-                        output_file=file.path(dirname(inputFile), "../serve", 'index.html')) })
+                        output_file=file.path(dirname(inputFile), "../docs", 'index.html')) })
 output: 
   html_document
 ---
