re-arranging table

--- a/notebooks/mimic_cc.Rmd
+++ b/notebooks/mimic_cc.Rmd
@@ -51,6 +51,7 @@ yeast_gff = readRDS(Sys.getenv("yeast_gff"))
 as_tibble(colData(dds)) %>%
   group_by(genotype, aminoAcid) %>%
   tally() %>%
+  arrange(aminoAcid) %>%
   DT::datatable()
 ```
 
